fix (Mobile) Fixes overflow

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -108,6 +108,12 @@ body{
   display:inline-block;
 }
 
+.links li{
+  white-space:nowrap;
+  text-overflow: ellipsis;
+  overflow:hidden;
+}
+
 @keyframes "blink" {
   from, to {
     visibility: visible;
